# Xt

./: .editorconfig  CMakeLists.txt  README.md
.github/workflows/: xt.yml
example/: CMakeLists.txt
example/XtTextEditor/: CMakeLists.txt  main.cpp
include/Xt/Core/: API.h  Application.h  NonCopyable.h  Object.h  Singleton.h  Util.h
include/Xt/Core/System/MacOS/: ApplicationCocoa.h
include/Xt/Core/System/Windows/: ApplicationWin32.h
include/Xt/Widgets/: API.h  Button.h  Widget.h  Window.h
include/Xt/Widgets/System/MacOS/: WindowCocoa.h
include/Xt/Widgets/System/Windows/: WidgetWin32.h  WindowWin32.h
src/: CMakeLists.txt
src/Core/: Application.cpp  Object.cpp
src/Core/System/MacOS/: ApplicationCocoa.mm
src/Core/System/Windows/: ApplicationWin32.cpp
src/Widgets/: Button.cpp  Widget.cpp  Window.cpp
src/Widgets/System/MacOS/: WindowCocoa.mm
src/Widgets/System/Windows/: WidgetWin32.cpp  WindowWin32.cpp
